--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,12 @@
   "start_url": "./?utm_source=web_app_manifest",
   "display": "standalone",
   "background_color": "#fff",
-  "theme_color": "#F44336", 
+  "theme_color": "#9C27B0", 
+  "icons":[{
+    "src":"./img/icon.png",
+    "sizes":"192x192",
+    "type":"image/png"
+  } ]
   "scope":"./",  
   "orientation":"portrait", 
   "lang":"es"
