--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
   "start_url": "./?utm_source=web_app_manifest",
   "display": "standalone",
   "background_color": "#fff",
-  "theme_color": "#9C27B0", 
+  "theme_color": "#8E24AA", 
   "icons":[{
     "src":"./img/icon.png",
     "sizes":"192x192",
