--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   "background_color": "#fff",
   "theme_color": "#673AB7", 
   "icons":[{
-    "src":"./img/icon.png",
+    "src":"./img/iconN.png",
     "sizes":"192x192",
     "type":"image/png"
   } ], 
